--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "node  ./db/testConnection.js"
+    "test": "echo \"No tests specified yet\" && exit 0"
   },
   "author": "Jarrett",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "inquirer": "^8.2.4",
+    "inquirer": "^8.2.6",
     "mysql2": "^2.3.3"
   },
   "directories": {
